server/test-data/lsp/project1/src/Test.java
class Test {
  public Test() {
    int x;
    x = 1 + 2   // error: no semicolon
  }
}